cmake_minimum_required (VERSION 2.6)
project (gl-instancing)
add_executable(gl-instancing main.c)
find_package (glfw)
find_package (opengl)
find_package (glut)
target_link_libraries (gl-instancing ${GLFW_LIBRARY})
target_link_libraries (gl-instancing ${OPENGL_LIBRARY})
target_link_libraries (gl-instancing ${GLUT_LIBRARY})
